[project]
name = "autonomous-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.29",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Flat-layout project: explicitly list Python modules to avoid
# auto-discovery errors from non-code folders like data/ and outputs/.
py-modules = ["agent", "api", "app", "data_loader", "main"]
